# job-bot

./: .gitignore  AUTO_APPLY_UPGRADE_COMPLETE.md  BEDTIME_STATUS.md  BREAKTHROUGH_SUMMARY.md  CLAUDE.md  CODE_SNIPPETS_FOR_OPUS.py  COMPLETE_UPGRADE_v3.md  COMPREHENSIVE_FIX_SUMMARY.md  CURRENT_STATUS_FOR_OPUS.txt  DROPDOWN_FIX.md  FILE_UPLOAD_UPGRADE.md  FINAL_BEDTIME_SUMMARY.txt  FINAL_FIXES_NEEDED.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  HANDOFF_SUMMARY.txt  HANDOFF_TO_CLAUDE_OPUS.md  HANDOFF_TO_OPUS_DESKTOP.md  HANDOFF_UNIVERSAL_APPLY.md  LIVE_TEST_RESULTS.md  MULTI_PAGE_UPGRADE.md  OPUS_DESKTOP_PACKAGE.txt  OPUS_FIX_SUMMARY.md  PRODUCTION_READY_REPORT.md  QUICK_START.txt  README.md  README_FOR_OPUS.txt  TEST_RESULTS.md  UPGRADE_STATUS.md  UPGRADE_SUMMARY.txt  URL_AUDIT_RESULTS.md  VERIFICATION_RESULTS.md  auto_apply_v4.py  capture_full_form.py  check_filled_form.py  debug_field_detection.py  debug_problem_fields.py  inspect_dropdown.py  location_autocomplete_fix.py  package-lock.json  (+17 more)
job_bot/: __init__.py  ai.py  applier.py  browser.py  config.py  fields.py  form_filler.py  profile.py  react_select.py  utils.py
outputs/: AUTO_APPLY_FEATURES.txt  AUTO_APPLY_SUMMARY.txt  application_log.json  greenhouse_form.html  page_text_for_claude.txt
profiles/: job_profile.json  scored_jobs.json
resumes/: my_resume.txt  my_resume.txt.save
scripts/: CHANGELOG.md  auto_apply.py  auto_apply.py.backup  auto_apply.py.bak  auto_apply_broken_backup.py  auto_apply_final.py  auto_apply_v2.py  auto_apply_v3.py  auto_apply_v4.py  build_profile.py  build_profile_v2.py  dashboard.py  (+6 more)
(+139 files in other folders)
